tests/resources/invalid/type/class/access_field_wrong_type.mamba
class MyClass
    def something: String <- "my string"


def my_class <- MyClass()
def b <- my_class.something

def c <- b
